deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmas
  labels:
    name: hmas
    environment: production
